resources/css/app.css
@source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
@source '../../storage/framework/views/*.php';
@source '../**/*.blade.php';
@source '../**/*.js';

@property --rotate {
    syntax: "<angle>";
    initial-value: 45deg;
    inherits: false;
}

:root {
    --bg-color: #0a0a0a;
    --fg-color: #fff;
    --fg-color-content: rgb(209 213 219);
    --bg-color-special: #191919;
    --fg-color-special: #e25151;
    --fg-color-light: rgb(156 163 175);
}

* {
    box-sizing: border-box;
}

body {
    margin: 0;
    font-family:
        system-ui,
        -apple-system,
        BlinkMacSystemFont,
        "Segoe UI",
        Roboto,
        Oxygen,
        Ubuntu,
        Cantarell,
        "Open Sans",
        "Helvetica Neue",
        sans-serif;
    background-color: var(--bg-color);
    color: var(--fg-color);
    font-size: 18px;
}

body::before {
    --size: 100px;
    --line: color-mix(in lch, canvasText, #76707080 85%);
    content: "";
    height: 100vh;
    width: 100vw;
    position: fixed;
    background:
        linear-gradient(90deg, var(--line) 1px, transparent 1px var(--size)) 50%
            50% / var(--size) var(--size),
        linear-gradient(var(--line) 1px, transparent 1px var(--size)) 50% 50% /
            var(--size) var(--size);
    mask: linear-gradient(-25deg, transparent 30%, white);
    top: 0;
    transform-style: flat;
    pointer-events: none;
    z-index: -1;
}

a {
    color: var(--fg-color);
}

body {
    min-height: 100vh;
    display: grid;
    grid-template-rows: auto 1fr;

    > header {
        padding: 0.5em 1em;

        nav {
            ul {
                margin: 0.2em 0;
                list-style: none;
                display: flex;
                justify-content: flex-end;
                gap: 1em;

                li {
                    text-transform: uppercase;
                    color: var(--fg-color-light);
                    fill: var(--fg-color-light);
                    display: flex;
                    align-items: center;

                    label {
                        display: flex;
                        align-items: center;
                    }

                    svg {
                        width: 1.1em;
                        height: 1.1em;
                        fill: var(--fg-color-light);
                    }
                }
            }
        }
    }

    main {
        margin: 1em;

        > * {
            max-width: 1280px;
            margin: 0 auto;
        }
    }

    .lang-selector {
        display: flex;
        align-items: center;

        select {
            border: none;
            outline: none;
            color: inherit;
            background-color: inherit;
            font-size: 1em;
            text-transform: uppercase;
        }
    }

    .page {
        padding: 0 1em;

        h1,
        h2,
        h3,
        h4,
        h5,
        h6 {
            margin: 0;
            font-size: initial;
        }

        .profile {
            max-width: 800px;
            min-height: 100vh;

            > header {
                margin-bottom: 1em;
                font-size: 2em;
                display: flex;
                flex-direction: column;
                align-items: center;
                text-align: center;
                gap: 1em;

                .profile__image {
                    margin-top: 0.5em;
                    width: 100px;
                    height: 100px;
                    position: relative;

                    .profile__image__bg {
                        border-radius: 50%;
                        position: absolute;
                        inset: -0.25rem;
                        filter: blur(8px);
                        opacity: 0.25;
                        background: linear-gradient(to right, #ff5f6d, #ffc371);
                        transition-duration: 1000ms;
                        transition-property:
                            color,
                            background-color,
                            border-color,
                            fill,
                            stroke,
                            opacity,
                            box-shadow,
                            transform,
                            filter,
                            -webkit-text-decoration-color,
                            -webkit-backdrop-filter;
                        transition-property:
                            color, background-color, border-color,
                            text-decoration-color, fill, stroke, opacity,
                            box-shadow, transform, filter, backdrop-filter;
                        transition-property:
                            color,
                            background-color,
                            border-color,
                            text-decoration-color,
                            fill,
                            stroke,
                            opacity,
                            box-shadow,
                            transform,
                            filter,
                            backdrop-filter,
                            -webkit-text-decoration-color,
                            -webkit-backdrop-filter;
                        transition-timing-function: cubic-bezier(
                            0.4,
                            0,
                            0.2,
                            1
                        );
                    }

                    img {
                        border-radius: 50%;
                        width: 100%;
                        height: 100%;
                        object-fit: cover;
                        filter: grayscale(100%) brightness(80%);
                        border-width: 2px;
                    }
                }

                .profile__image:hover .profile__image__bg {
                    filter: blur(12px);
                    opacity: 0.5;
                }

                .profile__title {
                    h1 {
                        font-size: 1em;
                        margin: 0;

                        strong {
                            background: linear-gradient(
                                135deg,
                                #ff5f6d 0%,
                                #ffc371 100%
                            );
                            -webkit-background-clip: text;
                            -webkit-text-fill-color: transparent;
                        }
                    }
                }

                .profile__subtitle {
                    font-size: 1.25rem;
                    font-weight: 300;
                    color: var(--fg-color-light);
                    margin-top: 0.5em;
                }

                @media (min-width: 768px) {
                    flex-direction: row;
                    align-items: flex-start;
                    gap: 30px;
                    text-align: left;
                    font-size: 3.75em;
                }
            }

            .profile__content {
                color: var(--fg-color-content);
                font-size: 1em;
                font-weight: 300;
                @media (min-width: 768px) {
                    font-size: 1.25em;
                }
            }

            .profile__work {
                margin-top: 2em;
                display: flex;
            }

            .profile__work > div {
                font-weight: 300;
                font-size: 0.6em;
                padding: 0.5rem 1rem;
                border-radius: 9999px;
                background: rgba(255, 255, 255, 0.05);
                backdrop-filter: blur(10px);
                -webkit-backdrop-filter: blur(10px);
                border: 1px solid rgba(255, 255, 255, 0.05);
                color: rgba(156, 163, 175, 1);
                box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
                transition: all 0.3s ease;

                a {
                    color: white;
                    text-decoration: none;
                    transition: all 0.3s ease;
                }
            }

            .profile__work > div:hover {
                border-color: rgba(255, 95, 109, 0.4);
                transform: translateY(-5px);
            }
        }

        .experience,
        .open-source {
            margin-top: 3em;

            .experience__title,
            .open-source__title {
                font-size: 1.5em;
                color: var(--fg-color-light);

                h2 {
                    font-size: 1em;
                }
            }

            .experience__content,
            .open-source__content {
                margin-top: 1em;
                display: flex;
                gap: 2em;
                flex-wrap: wrap;
            }
        }

        .experience {
            .experience__content {
                .item {
                    display: flex;
                    flex-direction: column;
                    align-items: center;
                    justify-content: end;
                    gap: 0.5em;
                    max-width: 300px;

                    svg,
                    img {
                        width: 3em;
                        height: 3em;
                    }
                }
            }
        }

        .open-source {
            .open-source__content {
                display: grid;
                grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));

                @media (max-width: 500px) {
                    grid-template-columns: 1fr;
                }

                .item {
                    display: flex;
                    flex-direction: column;
                    justify-content: space-between;
                    gap: 0.5em;
                    padding: 1em;
                    border-radius: 1em;
                    position: relative;
                    background-color: var(--bg-color);

                    .title {
                        svg {
                            margin-left: 0.2em;
                            width: 0.7em;
                            height: 0.7em;
                            fill: var(--fg-color-light);
                        }
                    }

                    .tags {
                        display: flex;
                        flex-wrap: wrap;
                        gap: 0.5em;

                        em {
                            padding: 0.2em 0.5em;
                            border: 1px solid var(--fg-color-light);
                            border-radius: 1em;
                        }
                    }

                    .description {
                        line-height: 1.3em;
                        color: var(--fg-color-light);
                        flex: 1;

                        code {
                            color: var(--fg-color);
                            font-weight: bold;
                            font-family: inherit;
                        }
                    }
                }

                .item:before {
                    content: "";
                    width: 101%;
                    height: 101%;
                    border-radius: 1em;
                    background-image: linear-gradient(
                        var(--rotate),
                        #ff4b2b,
                        #f86184 43%,
                        #ffb347
                    );
                    position: absolute;
                    z-index: -1;
                    top: -0.5%;
                    left: -0.5%;
                    transition: all 0.5s;
                }

                .item:hover::before {
                    animation: spin 2.5s linear infinite;
                }
            }
        }
    }
}

@keyframes spin {
    0% {
        --rotate: 0deg;
    }
    100% {
        --rotate: 360deg;
    }
}

